--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -154,5 +154,6 @@
   "dn16:1.16.2": "„Ah, Blaženi, ja ovako verujem:",
   "dn16:1.16.3": "’Nije bilo, neće biti, niti sada postoji asketa ili brahman koji nadilazi Blaženog u višem znanju o potpunom probuđenju’.” ",
   "dn16:1.16.5": "’Ovako verujem, Blaženi:",
-  "dn16:1.16.6": "’Nije bilo, neće biti, niti sada postoji asketa ili brahman koji nadilazi Blaženog u višem znanju o potpunom probuđenju’.” "
+  "dn16:1.16.6": "’Nije bilo, neće biti, niti sada postoji asketa ili brahman koji nadilazi Blaženog u višem znanju o potpunom probuđenju’.” ",
+  "dn16:1.16.7": "Sāriputta, plemenite, potpuno probuđene Bude koji su živeli u prošlosti, da li si znao sve te Blažene pronikavši svojim umom u njihov um ovako:"
 }
