--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "mn93:4.12": "Und zum zweiten Mal lehnte Assalāyana ab. ",
   "mn93:4.16": "Zum dritten Mal sagten diese Brahmanen zu ihm: ",
   "mn93:4.17": "„Dieser Asket Gotama plädiert für die Läuterung aller vier Kasten. ",
-  "mn93:4.18": "Bitte, Herr Assalāyana, führe mit dem Asketen Gotama ein Streitgespräch darüber. "
+  "mn93:4.18": "Bitte, Herr Assalāyana, führe mit dem Asketen Gotama ein Streitgespräch darüber. ",
+  "mn93:4.19": "Denn du hast als Wanderer gelebt. "
 }
