--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "mn93:4.17": "„Dieser Asket Gotama plädiert für die Läuterung aller vier Kasten. ",
   "mn93:4.18": "Bitte, Herr Assalāyana, führe mit dem Asketen Gotama ein Streitgespräch darüber. ",
   "mn93:4.19": "Denn du hast als Wanderer gelebt. ",
-  "mn93:4.20": "Gib dich nicht geschlagen, bevor du in den Kampf gezogen bist!“ "
+  "mn93:4.20": "Gib dich nicht geschlagen, bevor du in den Kampf gezogen bist!“ ",
+  "mn93:4.21": "Daraufhin sagte Assalāyana zu ihnen: "
 }
