--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -160,5 +160,6 @@
   "dn16:1.16.9": "„Ne, poštovani gospodine.”",
   "dn16:1.16.10": "A one plemenite, potpuno probuđene Bude koji će tek živeti u budućnosti, da li znaš sve te Blažene pronikavši svojim umom u njihov um ovako:",
   "dn16:1.16.11": "’Ovakva je vrlina tih Blaženih, ovakvo učenje, ovakva mudrost, ovakvo življenje, ovakvo oslobođenje’?”",
-  "dn16:1.16.12": "„Ne, poštovani gospodine. "
+  "dn16:1.16.12": "„Ne, poštovani gospodine. ",
+  "dn16:1.16.13": "A mene koji sam sada plemeniti, potpuno probuđeni Buda, da li si pronikao svojim umom u moj um ovako:"
 }
