--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -162,5 +162,6 @@
   "dn16:1.16.11": "’Ovakva je vrlina tih Blaženih, ovakvo učenje, ovakva mudrost, ovakvo življenje, ovakvo oslobođenje’?”",
   "dn16:1.16.12": "„Ne, poštovani gospodine. ",
   "dn16:1.16.13": "A mene koji sam sada plemeniti, potpuno probuđeni Buda, da li si pronikao svojim umom u moj um ovako:",
-  "dn16:1.16.14": "’Ovakva je vrlina Blaženog, ovakvo učenje, ovakva mudrost, ovakvo življenje, ovakvo oslobođenje’?”"
+  "dn16:1.16.14": "’Ovakva je vrlina Blaženog, ovakvo učenje, ovakva mudrost, ovakvo življenje, ovakvo oslobođenje’?”",
+  "dn16:1.16.15": "„Ne, poštovani gospodine.”"
 }
