--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "mn93:4.19": "Denn du hast als Wanderer gelebt. ",
   "mn93:4.20": "Gib dich nicht geschlagen, bevor du in den Kampf gezogen bist!“ ",
   "mn93:4.21": "Daraufhin sagte Assalāyana zu ihnen: ",
-  "mn93:4.22": "„Offenbar, meine Herren, kommt es bei euch nicht an, wenn ich sage: "
+  "mn93:4.22": "„Offenbar, meine Herren, kommt es bei euch nicht an, wenn ich sage: ",
+  "mn93:4.23": "‚Man sagt, der Asket Gotama sei einer, der nach Grundsätzen spricht. "
 }
