--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "mn93:4.20": "Gib dich nicht geschlagen, bevor du in den Kampf gezogen bist!“ ",
   "mn93:4.21": "Daraufhin sagte Assalāyana zu ihnen: ",
   "mn93:4.22": "„Offenbar, meine Herren, kommt es bei euch nicht an, wenn ich sage: ",
-  "mn93:4.23": "‚Man sagt, der Asket Gotama sei einer, der nach Grundsätzen spricht. "
+  "mn93:4.23": "‚Man sagt, der Asket Gotama sei einer, der nach Grundsätzen spricht. ",
+  "mn93:4.24": "Aber mit denen, die nach Grundsätzen sprechen, ist es schwer, ein Streitgespräch zu führen. "
 }
