--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -164,5 +164,6 @@
   "dn16:1.16.13": "A mene koji sam sada plemeniti, potpuno probuđeni Buda, da li si pronikao svojim umom u moj um ovako:",
   "dn16:1.16.14": "’Ovakva je vrlina Blaženog, ovakvo učenje, ovakva mudrost, ovakvo življenje, ovakvo oslobođenje’?”",
   "dn16:1.16.15": "„Ne, poštovani gospodine.”",
-  "dn16:1.16.16": "„Dakle, Sāriputta, ti ne znaš umove prošlih, budućih i sadašnjeg plemenitog, potpuno probuđenoga."
+  "dn16:1.16.16": "„Dakle, Sāriputta, ti ne znaš umove prošlih, budućih i sadašnjeg plemenitog, potpuno probuđenoga.",
+  "dn16:1.16.17": "Kako onda možeš reći tako hrabre reči, odlučne reči, pravi lavovski rik:"
 }
