--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -166,5 +166,6 @@
   "dn16:1.16.15": "„Ne, poštovani gospodine.”",
   "dn16:1.16.16": "„Dakle, Sāriputta, ti ne znaš umove prošlih, budućih i sadašnjeg plemenitog, potpuno probuđenoga.",
   "dn16:1.16.17": "Kako onda možeš reći tako hrabre reči, odlučne reči, pravi lavovski rik:",
-  "dn16:1.16.18": "’Nije bilo, neće biti, niti sada postoji asketa ili brahman koji nadilazi Blaženog u višem znanju o potpunom probuđenju’.” "
+  "dn16:1.16.18": "’Nije bilo, neće biti, niti sada postoji asketa ili brahman koji nadilazi Blaženog u višem znanju o potpunom probuđenju’.” ",
+  "dn16:1.17.1": "„Poštovani gospodine, ja ne znam umove prošlih, budućih i sadašnjeg plemenitog, potpuno probuđenoga."
 }
