--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "mn93:4.22": "„Offenbar, meine Herren, kommt es bei euch nicht an, wenn ich sage: ",
   "mn93:4.23": "‚Man sagt, der Asket Gotama sei einer, der nach Grundsätzen spricht. ",
   "mn93:4.24": "Aber mit denen, die nach Grundsätzen sprechen, ist es schwer, ein Streitgespräch zu führen. ",
-  "mn93:4.25": "Ich bin nicht in der Lage, mit dem Asketen Gotama über diese Sache ein Streitgespräch zu führen.‘ "
+  "mn93:4.25": "Ich bin nicht in der Lage, mit dem Asketen Gotama über diese Sache ein Streitgespräch zu führen.‘ ",
+  "mn93:4.26": "Dennoch werde ich auf eure Bitten hingehen.“ "
 }
