--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -168,5 +168,6 @@
   "dn16:1.16.17": "Kako onda možeš reći tako hrabre reči, odlučne reči, pravi lavovski rik:",
   "dn16:1.16.18": "’Nije bilo, neće biti, niti sada postoji asketa ili brahman koji nadilazi Blaženog u višem znanju o potpunom probuđenju’.” ",
   "dn16:1.17.1": "„Poštovani gospodine, ja ne znam umove prošlih, budućih i sadašnjeg plemenitog, potpuno probuđenoga.",
-  "dn16:1.17.2": "Ali sam do takvog zaključka došao zaključivanjem zasnovanim na Dhammi."
+  "dn16:1.17.2": "Ali sam do takvog zaključka došao zaključivanjem zasnovanim na Dhammi.",
+  "dn16:1.17.3": "Baš kao što u kraljevom gradu na granici, jakom utvrđenju opasanom zidinama, postoji samo jedna kapija "
 }
