--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "mn93:4.26": "Dennoch werde ich auf eure Bitten hingehen.“ ",
   "mn93:5.1": "Da ging Assalāyana zusammen mit einer großen Gruppe von Brahmanen zum Buddha und tauschte Willkommensgrüße mit ihm aus. ",
   "mn93:5.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zum Buddha: ",
-  "mn93:5.3": "„Meister Gotama, die Brahmanen sagen: "
+  "mn93:5.3": "„Meister Gotama, die Brahmanen sagen: ",
+  "mn93:5.4": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. "
 }
