--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "mn93:5.4": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. ",
   "mn93:5.5": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
   "mn93:5.6": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
-  "mn93:5.7": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘ "
+  "mn93:5.7": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘ ",
+  "mn93:5.8": "Was sagt der Asket Gotama dazu?“ "
 }
