--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -171,5 +171,6 @@
   "dn16:1.17.2": "Ali sam do takvog zaključka došao zaključivanjem zasnovanim na Dhammi.",
   "dn16:1.17.3": "Baš kao što u kraljevom gradu na granici, jakom utvrđenju opasanom zidinama, postoji samo jedna kapija ",
   "dn16:1.17.4": "i na njoj stoji mudar, umešan, inteligentan stražar.",
-  "dn16:1.17.5": "I on ne pušta da uđu oni koje ne poznaje, a pušta one koje poznaje. A onda neko obiđe oko tog grada i ne vidi nijednu pukotinu u zidu, nijedan otvor čak ni toliko mali da bi mačka mogla kroz njega da se provuče."
+  "dn16:1.17.5": "I on ne pušta da uđu oni koje ne poznaje, a pušta one koje poznaje. A onda neko obiđe oko tog grada i ne vidi nijednu pukotinu u zidu, nijedan otvor čak ni toliko mali da bi mačka mogla kroz njega da se provuče.",
+  "dn16:1.17.6": "Takav bi čovek mogao zaključiti:"
 }
