--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "mn93:5.12": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
   "mn93:5.13": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "mn93:5.14": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘“ ",
-  "mn93:6.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ "
+  "mn93:6.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
+  "mn93:6.4": "„Was denkst du, Assalāyana? "
 }
