--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -180,5 +180,6 @@
   "dn16:1.17.11": "Isto tako, Blaženi, koji je sada plemeniti i potpuno probuđeni, jeste savladao pet prepreka, razumeo svojom mudrošću nečistoće uma koje ga slabe, učvrstio svoj um u četiri temelja svesnosti, razvio sedam elemenata probuđenja, te tako stekao više znanje o nenadmašnom potpunom probuđenju.”",
   "dn16:1.18.1": "A dok je boravio kraj Nāḷande, u Pāvārikinom mangovom gaju, Blaženi je monasima često govorio o Dhammi:",
   "dn16:1.18.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
-  "dn16:1.18.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge."
+  "dn16:1.18.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
+  "dn16:1.18.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge."
 }
