--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -181,5 +181,6 @@
   "dn16:1.18.1": "A dok je boravio kraj Nāḷande, u Pāvārikinom mangovom gaju, Blaženi je monasima često govorio o Dhammi:",
   "dn16:1.18.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
   "dn16:1.18.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
-  "dn16:1.18.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge."
+  "dn16:1.18.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
+  "dn16:1.18.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su"
 }
