--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -182,5 +182,6 @@
   "dn16:1.18.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
   "dn16:1.18.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
   "dn16:1.18.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
-  "dn16:1.18.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su"
+  "dn16:1.18.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
+  "dn16:1.18.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”"
 }
