--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -270,5 +270,6 @@
   "dn16:1.31.9": "tako poštovani, njega poštuju.",
   "dn16:1.31.10": "Saosećanja za njega imaju,",
   "dn16:1.31.11": "kao i majka za dete svoje.",
-  "dn16:1.31.12": "A čovek bogovima mio,"
+  "dn16:1.31.12": "A čovek bogovima mio,",
+  "dn16:1.31.13": "uvek vidi ono što je dobro.”"
 }
