--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -277,5 +277,6 @@
   "dn16:1.32.2": "„Na koju gradsku kapiju asketa Gotama bude izašao, ta će se zvati ’Gotamina kapija’.",
   "dn16:1.32.3": "Na kojem gazu asketa Gotama bude prešao reku Gang, taj će se zvati ’Gotamin gaz’.”",
   "dn16:1.32.4": "I zaista, na koju gradsku kapiju je asketa Gotama izašao, ta postade „Gotamina kapija.”",
-  "dn16:1.32.5": "Onda Blaženi dođe do reke Gang."
+  "dn16:1.32.5": "Onda Blaženi dođe do reke Gang.",
+  "dn16:1.33.1": "I tom prilikom je reka Gang bila je nadošla do vrha, tako da je iz nje mogao da pije gavran stojeći na obali."
 }
