--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -278,5 +278,6 @@
   "dn16:1.32.3": "Na kojem gazu asketa Gotama bude prešao reku Gang, taj će se zvati ’Gotamin gaz’.”",
   "dn16:1.32.4": "I zaista, na koju gradsku kapiju je asketa Gotama izašao, ta postade „Gotamina kapija.”",
   "dn16:1.32.5": "Onda Blaženi dođe do reke Gang.",
-  "dn16:1.33.1": "I tom prilikom je reka Gang bila je nadošla do vrha, tako da je iz nje mogao da pije gavran stojeći na obali."
+  "dn16:1.33.1": "I tom prilikom je reka Gang bila je nadošla do vrha, tako da je iz nje mogao da pije gavran stojeći na obali.",
+  "dn16:1.33.2": "Neki ljudi tragali su za čamcima, neki drugi tragali su za skelom, a neki su pravili splavove ne bi li prešli na drugu obalu."
 }
