--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -279,5 +279,6 @@
   "dn16:1.32.4": "I zaista, na koju gradsku kapiju je asketa Gotama izašao, ta postade „Gotamina kapija.”",
   "dn16:1.32.5": "Onda Blaženi dođe do reke Gang.",
   "dn16:1.33.1": "I tom prilikom je reka Gang bila je nadošla do vrha, tako da je iz nje mogao da pije gavran stojeći na obali.",
-  "dn16:1.33.2": "Neki ljudi tragali su za čamcima, neki drugi tragali su za skelom, a neki su pravili splavove ne bi li prešli na drugu obalu."
+  "dn16:1.33.2": "Neki ljudi tragali su za čamcima, neki drugi tragali su za skelom, a neki su pravili splavove ne bi li prešli na drugu obalu.",
+  "dn16:1.33.3": "Na to Blaženi hitro, kao kada bi snažan čovek ispružio savijenu ruku ili savio ispruženu ruku, zajedno za monaškom zajednicom nestade sa ove obale Ganga i nađe se na drugoj."
 }
