--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -283,5 +283,6 @@
   "dn16:1.33.3": "Na to Blaženi hitro, kao kada bi snažan čovek ispružio savijenu ruku ili savio ispruženu ruku, zajedno za monaškom zajednicom nestade sa ove obale Ganga i nađe se na drugoj.",
   "dn16:1.34.1": "I vide Blaženi kako neki ljudi tragaju za čamcima, neki drugi tragaju za skelom, a neki prave splavove ne bi li prešli na drugu obalu.",
   "dn16:1.34.2": "Onda Blaženi, razumevši značenje svega toga, izgovori ove nadahnute reči:",
-  "dn16:1.34.3": "„Oni koji pređu uskomešanu bujicu, čine to "
+  "dn16:1.34.3": "„Oni koji pređu uskomešanu bujicu, čine to ",
+  "dn16:1.34.4": "podigavši most, takvi za sobom močvaru ostave."
 }
