--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -286,5 +286,6 @@
   "dn16:1.34.3": "„Oni koji pređu uskomešanu bujicu, čine to ",
   "dn16:1.34.4": "podigavši most; takvi za sobom močvaru ostave.",
   "dn16:1.34.5": "I dok obični ljudi još uvek splav svezuju,",
-  "dn16:1.34.6": "oštroumni su već na obali drugoj.”"
+  "dn16:1.34.6": "oštroumni su već na obali drugoj.”",
+  "dn16:2.1.0": "8. Govor o plemenitim istinama"
 }
