--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -288,5 +288,6 @@
   "dn16:1.34.5": "I dok obični ljudi još uvek splav svezuju,",
   "dn16:1.34.6": "oštroumni su već na obali drugoj.”",
   "dn16:2.1.0": "8. Govor o plemenitim istinama",
-  "dn16:2.1.1": "Onda Blaženi reče poštovanom Ānandi:"
+  "dn16:2.1.1": "Onda Blaženi reče poštovanom Ānandi:",
+  "dn16:2.1.2": "„Hajde, Ānanda, idemo do Koṭigāme.”"
 }
