--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -290,5 +290,6 @@
   "dn16:2.1.0": "8. Govor o plemenitim istinama",
   "dn16:2.1.1": "Onda Blaženi reče poštovanom Ānandi:",
   "dn16:2.1.2": "„Hajde, Ānanda, idemo do Koṭigāme.”",
-  "dn16:2.1.3": "„Da, poštovani gospodine,” odgovori Ānanda."
+  "dn16:2.1.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
+  "dn16:2.1.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Koṭigāmu."
 }
