--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -293,5 +293,6 @@
   "dn16:2.1.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:2.1.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Koṭigāmu.",
   "dn16:2.1.5": "Tu se on smestio.",
-  "dn16:2.2.1": "I tu on ovako reče monasima:"
+  "dn16:2.2.1": "I tu on ovako reče monasima:",
+  "dn16:2.2.2": "„Monasi, zato što nismo razumeli četiri plemenite istine, nismo proniknuli u četiri plemenite istine, i za mene i za vas bilo je dugo putovanje krugom preporađanja."
 }
