--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -295,5 +295,6 @@
   "dn16:2.1.5": "Tu se on smestio.",
   "dn16:2.2.1": "I tu on ovako reče monasima:",
   "dn16:2.2.2": "„Monasi, zato što nismo razumeli četiri plemenite istine, nismo proniknuli u četiri plemenite istine, i za mene i za vas bilo je dugo putovanje krugom preporađanja.",
-  "dn16:2.2.3": "A koje četiri?"
+  "dn16:2.2.3": "A koje četiri?",
+  "dn16:2.2.4": "Zato što nismo razumeli, zato što nismo proniknuli u plemenitu istinu o patnji,"
 }
