--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -304,5 +304,6 @@
   "dn16:2.3.1": "Tako reče Blaženi.",
   "dn16:2.3.2": "A zatim i ovo dodade učitelj:",
   "dn16:2.3.3": "„Zato što četiri plemenite istine",
-  "dn16:2.3.4": "toliko dugo ne videsmo;"
+  "dn16:2.3.4": "toliko dugo ne videsmo;",
+  "dn16:2.3.5": "dugo je bilo i naše putovanje"
 }
