--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -306,5 +306,6 @@
   "dn16:2.3.3": "„Zato što četiri plemenite istine",
   "dn16:2.3.4": "toliko dugo ne videsmo;",
   "dn16:2.3.5": "dugo je bilo i naše putovanje",
-  "dn16:2.3.6": "iz života u život."
+  "dn16:2.3.6": "iz života u život.",
+  "dn16:2.3.7": "Ali sada kada su istine uočene,"
 }
