--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -309,5 +309,6 @@
   "dn16:2.3.6": "iz života u život.",
   "dn16:2.3.7": "Ali sada kada su istine uočene,",
   "dn16:2.3.8": "vezanost za preporađanje nestala je.",
-  "dn16:2.3.9": "Presečen je koren patnje,"
+  "dn16:2.3.9": "Presečen je koren patnje,",
+  "dn16:2.3.10": "novih života više nema.”"
 }
