--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -311,5 +311,6 @@
   "dn16:2.3.8": "vezanost za preporađanje nestala je.",
   "dn16:2.3.9": "Presečen je koren patnje,",
   "dn16:2.3.10": "novih života više nema.”",
-  "dn16:2.4.1": "Dok je živeo kraj Koṭigāme, Blaženi je često govorio monasima o Dhammi:"
+  "dn16:2.4.1": "Dok je živeo kraj Koṭigāme, Blaženi je često govorio monasima o Dhammi:",
+  "dn16:2.4.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost."
 }
